# lua-component-demo

./: Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
src/: main.rs
test/: main.lua
test/wit/: test.wit
