[package]
name = "lua-component-demo"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
members = ['crates/runtime']

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
wit-parser = "0.240.0"
wit-component = "0.240.0"
wit-dylib = "0.240.0"
wasi-preview1-component-adapter-provider = "37.0.2"
