[package]
name = "lua-component-runtime"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
mlua = { version = "0.11.3", features = ['vendored'] }
wit-dylib-ffi = { git = 'https://github.com/bytecodealliance/wasm-tools' }

[features]
lua54 = ['mlua/lua54']
lua53 = ['mlua/lua53']
lua52 = ['mlua/lua52']
lua51 = ['mlua/lua51']
